--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-qt>=4.2.0",
+    "opencv-python>=4.5.0",
     "black>=22.0.0",
     "flake8>=4.0.0",
     "mypy>=0.950",
