--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,14 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        exclude:
-          # Optionally exclude some combinations to speed up CI
-          - os: macos-latest
-            python-version: "3.8"
-          - os: macos-latest
-            python-version: "3.9"
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v4
@@ -57,12 +51,6 @@ jobs:
           libpulse0 \
           x11-utils \
           xvfb
-
-    # macOS: Install system dependencies
-    - name: Install system dependencies (macOS)
-      if: runner.os == 'macOS'
-      run: |
-        brew install qt@6
 
     - name: Install Python dependencies
       run: |
@@ -132,9 +120,9 @@ jobs:
         name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
         path: test-results-*.xml
 
-    # Generate coverage report (only on one configuration)
+    # Generate coverage report (only on Ubuntu)
     - name: Generate coverage report
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+      if: matrix.os == 'ubuntu-latest'
       env:
         QT_QPA_PLATFORM: offscreen
         DISPLAY: ':99'
@@ -145,7 +133,7 @@ jobs:
         pytest tests/ --cov=src --cov-report=xml --cov-report=html
 
     - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+      if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
@@ -154,7 +142,7 @@ jobs:
         fail_ci_if_error: false
 
     - name: Upload coverage HTML
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+      if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4
       with:
         name: coverage-html
